Add nholmann json library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package(Boost 1.67.0 REQUIRED system thread regex)
 # Add to search path
 include_directories(${Boost_INCLUDE_DIR})
 
+#Consider embedding in future
+add_subdirectory(nlohmann)
 add_subdirectory(server)
 
 # add the executable
@@ -17,7 +19,10 @@ add_executable(Client client_asio.cpp)
 
 target_link_libraries(Server PUBLIC 
                       ${Boost_LIBRARIES}
-		      MatchmakingServer)
+		      MatchmakingServer
+		      nlohmann_json)
 
-target_link_libraries(Client PUBLIC ${Boost_LIBRARIES})
+target_link_libraries(Client PUBLIC 
+                      ${Boost_LIBRARIES}
+		      nlohmann_json)
 
