Finish prototype of json join packet transmission

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,5 +24,6 @@ target_link_libraries(Server PUBLIC
 
 target_link_libraries(Client PUBLIC 
                       ${Boost_LIBRARIES}
-		      nlohmann_json)
+		      nlohmann_json
+		      JoinPacket)
 
