--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,14 +2,16 @@ add_library(MatchmakingServer matchmaking_server.cpp)
 add_library(TCPConnection tcp_connection.cpp)
 add_library(Packet packet.cpp)
 add_library(JoinPacket join_packet.cpp)
-add_library(GameType gametype.hpp)
+add_library(GameType game_type.hpp)
 add_library(GameQueue game_queue.hpp)
 add_library(DeathmatchGameQueue deathmatch_game_queue.cpp)
+add_library(GameQueueManager game_queue_manager.cpp)
 
 set_target_properties(GameType PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(GameQueue PROPERTIES LINKER_LANGUAGE CXX)
 
 target_link_libraries(DeathmatchGameQueue PUBLIC GameQueue)
 target_link_libraries(JoinPacket PUBLIC Packet GameType)
-target_link_libraries(MatchmakingServer PUBLIC TCPConnection)
-target_link_libraries(TCPConnection PUBLIC JoinPacket)
+target_link_libraries(GameQueueManager PUBLIC GameType GameQueue DeathmatchGameQueue)
+target_link_libraries(MatchmakingServer PUBLIC TCPConnection GameQueueManager)
+target_link_libraries(TCPConnection PUBLIC JoinPacket GameQueue GameQueueManager)
