--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -6,12 +6,16 @@ add_library(GameType game_type.hpp)
 add_library(GameQueue game_queue.hpp)
 add_library(DeathmatchGameQueue deathmatch_game_queue.cpp)
 add_library(GameQueueManager game_queue_manager.cpp)
+add_library(User user.hpp)
 
 set_target_properties(GameType PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(GameQueue PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(User PROPERTIES LINKER_LANGUAGE CXX)
 
+target_link_libraries(TCPConnection PUBLIC JoinPacket GameQueue GameQueueManager)
+target_link_libraries(GameQueue PUBLIC TCPConnection GameType User)
 target_link_libraries(DeathmatchGameQueue PUBLIC GameQueue)
 target_link_libraries(JoinPacket PUBLIC Packet GameType)
 target_link_libraries(GameQueueManager PUBLIC GameType GameQueue DeathmatchGameQueue)
 target_link_libraries(MatchmakingServer PUBLIC TCPConnection GameQueueManager)
-target_link_libraries(TCPConnection PUBLIC JoinPacket GameQueue GameQueueManager)
+target_link_libraries(User PUBLIC TCPConnection)
