--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(MatchmakingServer matchmaking_server.cpp)
 add_library(TCPConnection tcp_connection.cpp)
 add_library(Packet packet.cpp)
-add_library(JoinPacket join_packet.cpp)
+add_library(FindGamePacket find_game_packet.cpp)
 add_library(GameType game_type.hpp)
 add_library(GameQueue game_queue.hpp)
 add_library(DeathmatchGameQueue deathmatch_game_queue.cpp)
@@ -11,10 +11,10 @@ add_library(User user.cpp)
 set_target_properties(GameType PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(GameQueue PROPERTIES LINKER_LANGUAGE CXX)
 
-target_link_libraries(TCPConnection PUBLIC JoinPacket GameQueue GameQueueManager User)
+target_link_libraries(TCPConnection PUBLIC FindGamePacket GameQueue GameQueueManager User)
 target_link_libraries(GameQueue PUBLIC TCPConnection GameType User)
 target_link_libraries(DeathmatchGameQueue PUBLIC GameQueue)
-target_link_libraries(JoinPacket PUBLIC Packet GameType)
+target_link_libraries(FindGamePacket PUBLIC Packet GameType)
 target_link_libraries(GameQueueManager PUBLIC GameType GameQueue DeathmatchGameQueue)
 target_link_libraries(MatchmakingServer PUBLIC TCPConnection GameQueueManager)
 target_link_libraries(User PUBLIC TCPConnection)
