--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(TCPConnection tcp_connection.cpp)
 add_library(Packet packet.cpp)
 add_library(FindGamePacket find_game_packet.cpp)
 add_library(JoinPacket join_packet.cpp)
+add_library(PacketType packet_type.hpp)
 add_library(GameType game_type.hpp)
 add_library(GameQueue game_queue.hpp)
 add_library(DeathmatchGameQueue deathmatch_game_queue.cpp)
@@ -10,6 +11,7 @@ add_library(GameQueueManager game_queue_manager.cpp)
 add_library(User user.cpp)
 
 set_target_properties(GameType PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(PacketType PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(GameQueue PROPERTIES LINKER_LANGUAGE CXX)
 
 target_link_libraries(TCPConnection PUBLIC JoinPacket FindGamePacket GameQueue GameQueueManager User)
@@ -19,3 +21,6 @@ target_link_libraries(FindGamePacket PUBLIC Packet GameType)
 target_link_libraries(GameQueueManager PUBLIC GameType GameQueue DeathmatchGameQueue)
 target_link_libraries(MatchmakingServer PUBLIC TCPConnection GameQueueManager)
 target_link_libraries(User PUBLIC TCPConnection JoinPacket)
+target_link_libraries(Packet PUBLIC PacketType)
+target_link_libraries(FindGamePacket PUBLIC PacketType)
+target_link_libraries(JoinPacket PUBLIC PacketType)
