--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(TCPConnection tcp_connection.cpp)
 add_library(Packet packet.cpp)
 add_library(FindGamePacket find_game_packet.cpp)
 add_library(JoinPacket join_packet.cpp)
+add_library(HostPacket host_packet.cpp)
 add_library(PacketType packet_type.hpp)
 add_library(GameType game_type.hpp)
 add_library(GameQueue game_queue.hpp)
@@ -14,7 +15,7 @@ set_target_properties(GameType PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(PacketType PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(GameQueue PROPERTIES LINKER_LANGUAGE CXX)
 
-target_link_libraries(TCPConnection PUBLIC JoinPacket FindGamePacket GameQueue GameQueueManager User)
+target_link_libraries(TCPConnection PUBLIC JoinPacket FindGamePacket HostPacket GameQueue GameQueueManager User)
 target_link_libraries(GameQueue PUBLIC TCPConnection GameType User JoinPacket)
 target_link_libraries(DeathmatchGameQueue PUBLIC GameQueue)
 target_link_libraries(FindGamePacket PUBLIC Packet GameType)
