Replace raw pointers with smart pointers which fixed segmentation fault for user pointer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,5 +26,6 @@ target_link_libraries(Client PUBLIC
                       ${Boost_LIBRARIES}
 		      nlohmann_json
 		      JoinPacket
-		      FindGamePacket)
+		      FindGamePacket
+		      HostPacket)
 
