Update server/CMakelist.txt to build ack packet and link ack type and ack packet

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -4,18 +4,21 @@ add_library(Packet packet.cpp)
 add_library(FindGamePacket find_game_packet.cpp)
 add_library(JoinPacket join_packet.cpp)
 add_library(HostPacket host_packet.cpp)
+add_library(AckPacket ack_packet.cpp)
 add_library(PacketType packet_type.hpp)
 add_library(GameType game_type.hpp)
 add_library(GameQueue game_queue.hpp)
 add_library(DeathmatchGameQueue deathmatch_game_queue.cpp)
 add_library(GameQueueManager game_queue_manager.cpp)
 add_library(User user.cpp)
+add_library(AckType ack_type.hpp)
 
 set_target_properties(GameType PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(PacketType PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(AckType PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(GameQueue PROPERTIES LINKER_LANGUAGE CXX)
 
-target_link_libraries(TCPConnection PUBLIC JoinPacket FindGamePacket HostPacket GameQueue GameQueueManager User)
+target_link_libraries(TCPConnection PUBLIC JoinPacket FindGamePacket HostPacket AckPacket GameQueue GameQueueManager User AckType)
 target_link_libraries(GameQueue PUBLIC TCPConnection GameType User JoinPacket)
 target_link_libraries(DeathmatchGameQueue PUBLIC GameQueue)
 target_link_libraries(FindGamePacket PUBLIC Packet GameType)
@@ -25,3 +28,4 @@ target_link_libraries(User PUBLIC TCPConnection JoinPacket)
 target_link_libraries(Packet PUBLIC PacketType)
 target_link_libraries(FindGamePacket PUBLIC PacketType)
 target_link_libraries(JoinPacket PUBLIC PacketType)
+target_link_libraries(AckPacket PUBLIC AckType)
